# obj_det

./: .gitignore  README.md  pyproject.toml
configs/augmentations/: basic.yaml  basic_light.yaml  none.yaml
configs/class_spaces/: traffic6.yaml
configs/dataset_refs/: acdc.yaml  bdd100k.yaml  carpk.yaml  cityscapes.yaml  dawn.yaml  exdark.yaml  hazydet.yaml  hazydet_clear.yaml  hazydet_real.yaml  merged_traffic6.yaml  nuscenes.yaml  udacity.yaml  visdrone.yaml  voc2007.yaml  xwod.yaml
configs/datasets/: acdc.yaml  bdd100k.yaml  carpk.yaml  cityscapes.yaml  dawn.yaml  exdark.yaml  hazydet.yaml  hazydet_clear.yaml  hazydet_real.yaml  nuscenes.yaml  udacity.yaml  visdrone.yaml  voc2007.yaml  xwod.yaml
configs/experiments/: conditional_detr_r50_hazydet_controlled.yaml  deformable_detr_hazydet_controlled.yaml  detr_r50_hazydet_controlled.yaml  dfine_nano_hazydet_controlled.yaml  dfine_small_hazydet_controlled.yaml  fasterrcnn_r50_hazydet_controlled.yaml  fcos_r50_hazydet_controlled.yaml  maskrcnn_r50_boxonly_hazydet_controlled.yaml  retinanet_r50_hazydet_controlled.yaml  rfdetr_base_hazydet_controlled.yaml  rfdetr_medium_hazydet_controlled.yaml  rfdetr_nano_hazydet_controlled.yaml  rfdetr_small_hazydet_controlled.yaml  rtdetr_r50vd_hazydet_controlled.yaml  yolo11m_hazydet_controlled.yaml  yolo11n_hazydet_controlled.yaml  yolo11s_hazydet_controlled.yaml  yolo26m_hazydet_controlled.yaml  yolo26n_hazydet_controlled.yaml  yolo26s_hazydet_controlled.yaml  yolos_small_hazydet_controlled.yaml  yolos_tiny_hazydet_controlled.yaml  yolov8m_hazydet_controlled.yaml  yolov8n_hazydet_controlled.yaml  yolov8s_hazydet_controlled.yaml
configs/model_groups/: detection_main.yaml  hf_transformers.yaml  torchvision.yaml  yolo_family.yaml
configs/models/: conditional_detr_r50.yaml  deformable_detr.yaml  detr_r50.yaml  dfine_nano.yaml  dfine_small.yaml  fasterrcnn_r50.yaml  fcos_r50.yaml  maskrcnn_r50_boxonly.yaml  retinanet_r50.yaml  rfdetr_base.yaml  rfdetr_medium.yaml  rfdetr_nano.yaml  rfdetr_small.yaml  rtdetr_r50vd.yaml  yolo11m.yaml  yolo11n.yaml  yolo11s.yaml  yolo26m.yaml  yolo26n.yaml  yolo26s.yaml  yolos_small.yaml  yolos_tiny.yaml  yolov8m.yaml  yolov8n.yaml  yolov8s.yaml
configs/plans/: carpk_controlled.yaml  dawn_controlled.yaml  exdark_controlled.yaml  hazydet_clear_controlled.yaml  hazydet_controlled.yaml  merged_traffic6_controlled.yaml  udacity_controlled.yaml  visdrone_controlled.yaml  voc2007_controlled.yaml  xwod_controlled.yaml
configs/preprocess/: 640.yaml
configs/recipes/: controlled_640.yaml  controlled_native.yaml
configs/search_spaces/: global_learning_rate.yaml  hf_transformer_controlled.yaml  torchvision_controlled.yaml  torchvision_sgd_controlled.yaml  yolo_controlled.yaml  yolo_controlled_sgd.yaml
configs/transforms/: basic_640.yaml  none_640.yaml
scripts/: convert.sh  download.sh  merge_datasets.py  prepare_dawn.py  prepare_nuscenes.py  prepare_udacity.py
src/obj_det/cli/: main.py
src/obj_det/datasets/: cli.py
src/obj_det/datasets/converters/: __init__.py  hf.py
src/obj_det/datasets/models/: __init__.py  annotation.py  base.py  bbox.py  record.py  schema.py  source_config.py  types.py
src/obj_det/datasets/sources/: __init__.py  base.py  bdd100k.py  cityscapes.py  coco.py  exdark.py  factory.py  visdrone.py  voc.py  yolo.py  yolo_noyml.py
src/obj_det/datasets/visualization/: __init__.py  draw.py
src/obj_det/models/: __init__.py  cli.py  experiment.py  plan.py  runner.py
src/obj_det/models/adapters/: __init__.py  base.py  factory.py  hf_trainer.py  torchvision.py  ultralytics.py
src/obj_det/models/data/: __init__.py  bbox.py  collate.py  hf_dataset.py  hf_targets.py  loader.py  profiling.py  row_batches.py  row_parser.py  sample.py  sample_source.py  transforms.py  ultralytics_dataset.py
src/obj_det/models/evaluation/: __init__.py  evaluator.py  grouping.py
src/obj_det/models/logging/: __init__.py  base.py  composite.py  factory.py  local.py  metrics.py  null.py  trainer_callback.py  wandb.py
src/obj_det/models/schemas/: __init__.py  artifact.py  base.py  config.py  experiment.py  logging.py  plan.py  prediction.py  result.py  tuning.py
src/obj_det/models/training/: __init__.py  protocol.py
src/obj_det/models/tuning/: __init__.py  final.py  runner.py  search_space.py
src/obj_det/models/utils/: __init__.py  repro.py
tests/: test_acdc_source.py  test_bdd100k_source.py  test_carpk_config.py  test_cityscapes_source.py  test_dataset_config_matrix.py  test_dataset_import_stats.py  test_dataset_scripts.py  test_merge_datasets.py  test_nuscenes_config.py  test_prepare_dawn.py  test_prepare_udacity.py  test_udacity_config.py  test_voc_source.py
tests/models/: helpers.py  test_backend_data.py  test_backend_smoke.py  test_boundaries.py  test_cli.py  test_evaluator.py  test_experiment_config.py  test_experiment_plan.py  test_hf_trainer_adapter.py  test_imports.py  test_logging.py  test_model_cli.py  test_model_config_matrix.py  test_repro.py  test_row_parser.py  test_torchvision_adapter.py  test_training_protocol.py  test_transforms.py  test_tuning.py  test_ultralytics_logging.py
